# melonstt

./: .gitignore  Cargo.toml  README.md  README.tp.md  build.rs  melon.toml
src/: cpal.rs  lib.rs  main.rs  network.rs  processor.rs  recorder.rs  whisper.rs
ui/: compact-tp.slint  compact.slint
