[package]
name = "melonstt"
version = "0.34.6"
authors = ["D. Fox <foxboxpdx@gmail.com>", "Z. Brunswick"]
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.5"
rosc = "0.10"
cpal = "0.15"
anyhow = "1"
hound = "3.5.1"
tempfile = "3.10"
log = "0.4"
env_logger = "0.11"

[dependencies.whisper-rs]
version = "0.11.1"
#features = ["cuda"]

[dependencies.tokio]
version = "1.35"
features = ["full"]

[build-dependencies]
slint-build = "1.5"

[profile.release]
panic = "abort"
