[package]
name = "melonstt"
version = "0.43.11"
authors = ["D. Fox", "Z. Brunswick"]
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.5"
rosc = "0.10"
cpal = "0.15"
anyhow = "1"
hound = "3.5.1"
tempfile = "3.10"
log = "0.4"
env_logger = "0.11"
dasp = { version = "0.11", features = ["all"]}
toml = "0.8.19"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.5"

[dependencies.whisper-rs]
version = "0.13.2"
#features = ["cuda"]

[dependencies.tokio]
version = "1.35"
features = ["full"]

[build-dependencies]
slint-build = "1.5"
winresource = "0.1.14"

[profile.release]
panic = "abort"

[package.metadata.winresource]
ProductName = "Melondog Speech-to-Text Transcriber"
LegalCopyright = "©2024 Melondog Software"